# WasserstoffModel

./: .gitignore  Bundeslaender.py  Bundeslaender1.py  main.py  openenergy.py  pyproject.toml  results.jld2
europe/: auto_start_end.py  constants.py  entsoe_import.py  entsoe_model.py  entsoe_model_legacy.py  entsoe_multiple_import.py  entsoe_multiple_model.py  entsoe_multiple_preprocess.py  entsoe_multiple_results.py  entsoe_preprocess.py  entsoe_results.py  main.py  profile_entsoe.py  termin2.md
europe/fast_model/: Project.toml  config.jl  costs.jl  costs_jump.jl  elasticities.jl  half_price.jl  model.jl  optimum.jl  plotting.jl  preprocess.jl  pullback.jl  results.jl  run.jl  solver.jl  test_costs.jl
model/: etrago_postgresql.py  filter_ego.py  openenergy.py  plot_ego.py  plot_new.py  postgre.txt  pypsa_ehv.py  pypsa_model.py  pypsa_pf.py  pypsa_plot.py  pypsa_scigrid.py
presentation/: Termin_1.tex
presentation/template_johannes/: literatur.bib
presentation/termin1/: Präsentation.tex
presentation/termin2/: Präsentation.tex
