[tool.poetry]
name = "wasserstoffmodel"
version = "0.1.0"
description = ""
authors = ["Johannes Nägele <johannes-naegele@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
pandas = "^2.2.0"
shapely = "^2.0.3"
geopandas = "^0.14.3"
contextily = "^1.5.0"
pyarrow = "^15.0.0"
pypsa = "^0.27.0"
cartopy = "^0.22.0"
entsoe-py = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
